Exemplo de uso da câmera naiva do ionic

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
 page-home {
 
+  .imagem {
+    height: 90%;
+    width: 100%;
+  }
+
+  .btnIniCamera {
+    width: 98%;
+    left: 1%;
+    background-color: #32db64;
+  }
+
 }
+
